--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=seminar6
+
+
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/sem6_2itb
+spring.datasource.username=agnes
+spring.datasource.password=pasword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
